ApiAuthorization fix to add exact information in permissionsMap